# lambda-security-scanner

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compliance.md  pyproject.toml  remediation-guide.md  security-checks.md
lambda_security_scanner/: __init__.py  cli.py  compliance.py  html_reporter.py  scanner.py  utils.py
lambda_security_scanner/checks/: access_control.py  base.py  code_security.py  function_config.py  logging_monitoring.py  network_security.py
lambda_security_scanner/templates/: report.html
tests/: test_access_control.py  test_cli.py  test_code_security.py  test_compliance.py  test_function_config.py  test_logging_monitoring.py  test_network_security.py  test_scanner.py  test_scoring.py
